# mcp-sonic-pi

./: README.md  pyproject.toml
.github/workflows/: release.yml
src/mcp_sonic_pi/: __main__.py  server.py
